cybersecurityaiBCAService.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybersecurityai
  namespace: cybersecuritybca
  labels:
    app: cybersecurityai
spec:
  #clusterIP: None
  ports:
    - name: http
      port: 4002
      targetPort: 4002
      protocol: TCP
  selector:
    app: cybersecurityai
  type: ClusterIP
